fix-image-stretch-2

--- a/src/pages/digital-garden.module.scss
+++ b/src/pages/digital-garden.module.scss
@@ -11,7 +11,8 @@
     border: 1px solid var(--color3);
     border-radius: 5px;
     padding: 1rem;
-    flex-basis: 25%;
+    min-width: 8rem;
+    max-width: 10rem;
     margin: 1rem;
     transition: all 0.5s ease-in-out;
     .plant__name {
