--- a/src/templates/seed.module.scss
+++ b/src/templates/seed.module.scss
@@ -22,6 +22,7 @@
     justify-content: center;
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 .image {
